<resources>
    <string name="app_name">Dicee</string>
    <string name="roll_button_text">Roll</string>
    <string name="description">Description</string>
    <string name="description_button">Rolls the Dice</string>
    <string name="casino_logo">Casino Logo</string>
    <string name="left_dice_image">Left Dice Image</string>
    <string name="right_dice_image">Right Dice Image</string>
</resources>
