<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/new_background"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/image_leftDice"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right_logo"
        app:layout_constraintStart_toStartOf="@+id/guideline_left_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dicee_logo"
        android:contentDescription="@string/casino_logo" />


    <ImageView
        android:id="@+id/image_leftDice"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toStartOf="@+id/image_rightDice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/left_dice_image"
        app:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/image_rightDice"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_leftDice"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/right_dice_image"
        app:srcCompat="@drawable/dice1" />


    <Button
        android:id="@+id/rollButton"

        style="@style/Widget.AppCompat.Button.Colored"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"

        android:contentDescription="@string/description_button"
        android:text="@string/roll_button_text"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_right_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_left_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />


</android.support.constraint.ConstraintLayout>
